# multi-touch-tester

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build_win32.bat  main.cpp  manifest.xml  version.rc  version.src
